<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weight_analyzer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bmianalyzer.bmianalyzer.WeightAnalyzerActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
               android:orientation="vertical">

        <TextView
            android:text="@string/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_header"
            android:textStyle="normal|bold"
            tools:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_margin="5dp"
            android:background="#0000ff" />

        <TextView
            android:text="@string/text_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_radio"
            android:textStyle="normal|bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_bmiRange"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <RadioButton
                android:text="@string/range1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_range1"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <RadioButton
                android:text="@string/range2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_range2"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <RadioButton
                android:text="@string/range3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_range3"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <RadioButton
                android:text="@string/range4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_range4"
                android:layout_weight="1"
                android:layout_margin="5dp" />
        </RadioGroup>

        <TextView
            android:text="@string/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_height"
            android:textStyle="normal|bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_feet"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_feet"
                android:layout_weight="0.60" />

            <TextView
                android:text="@string/txt_feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_feet"
                android:textStyle="normal|bold"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_inches"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/editText_inches" />

            <TextView
                android:text="@string/txt_inches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_inches"
                android:textStyle="normal|bold"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_calculate"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_resut"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

    </LinearLayout>



</ScrollView>
